# better_transformer

./: README.md  pyproject.toml
src/better_transformer/: __init__.py  transformation.py
src/better_transformer/models/: attention.py  base.py  decoder_models.py  encoder_models.py
tests/: test_better_transformer.py
