[project]
name = "better-transformer"
version = "0.1.0"
description = ""
authors = [
    {name = "wirthual",email = "wirthra@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "accelerate (>=1.10.1,<2.0.0)",
    "optimum (>=1.27.0,<2.0.0)",
    "transformers (>=4.51.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
transformers = "^4.48.0"
torch = "~2.6.0"

